--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
                                                 <img src="img/faq3.svg" alt="">
                                             </div>
                                             <h3 class="benefits__title get-right">3. Дождитесь одобрения</h3>
-                                            <div class="benefits__subtitle get-left">Меньше чем за 1 минуту придет решение по вашей заявке. Система автоматически подберет тариф в соответствии с вашим запросом.</div>
+                                            <div class="benefits__subtitle get-right">Меньше чем за 1 минуту придет решение по вашей заявке. Система автоматически подберет тариф в соответствии с вашим запросом.</div>
                                             <div class="wrapper-get-img get-right">
                                                 <img src="img/faq4.svg" alt="">
                                             </div>
-                                            <h3 class="benefits__title get-left">4. Получите деньги</h3>
+                                            <h3 class="benefits__title get-right">4. Получите деньги</h3>
                                             <div class="benefits__subtitle get-right">Выберите наиболее удобный способ перечисления Вам денег: на банковскую карту, QIWI-Кошелек, через систему Contact или на банковский счет.</div>
                                         </div>
                                     </div>
@@ -268,7 +268,7 @@
                                             <span class="input-number">&#8381;</span>  
                                         </div>
                                     </div>
-                                    <input type="range"  min="2000" max="70000" value="10000" step="500" class="range" id="myRange">
+                                    <input type="range"  min="0" max="70000" value="10000" step="500" class="range" id="myRange">
                                     <div class="prices">
                                         <div class="price">2000 &#8381;</div>
                                         <div class="price">70000 &#8381;</div>
@@ -279,10 +279,10 @@
                                         <h3 class="sum__title">Срок займа</h3>
                                         <div class="wrapper-input-number">
                                             <span id="valueDate" class="input-number"></span>
-                                            <span class="input-number">дней</span>  
+                                            <span class="input-number" id="day">дней</span>  
                                         </div>
                                     </div>
-                                    <input type="range"  min="10" max="31" value="10" step="1" class="range" id="rangeDate">
+                                    <input type="range"  min="10" max="70" value="15" step="1" class="range" id="rangeDate">
                                     <div class="prices">
                                         <div class="price">10 дней</div>
                                         <div class="price">24 недели</div>
