--- a/index.html
+++ b/index.html
@@ -282,14 +282,14 @@
                                             <span class="input-number" id="day">дней</span>  
                                         </div>
                                     </div>
-                                    <input type="range"  min="10" max="70" value="15" step="1" class="range" id="rangeDate">
+                                    <input type="range"  min="10" max="168" value="15" step="1" class="range" id="rangeDate">
                                     <div class="prices">
                                         <div class="price">10 дней</div>
                                         <div class="price">24 недели</div>
                                     </div>
                                 </div>
 
-                                <a href="#" class="benefits-btn calc-btn">Получить деньги</a>
+                                <a href="#" class="benefits-btn calc-btn">Получить <span id="get-value"></span></a>
                             </div>
                         </div>
                     </div>
