--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                             </div>
 
                             <div class="main__left-content">
+                                
                                 <div class="section-benefits">
                                     <h2 class="content-title rewiews__title">Преимущества займов в LIME</h2>
                                     <div class="benefits">
@@ -268,7 +269,7 @@
                                             <span class="input-number">&#8381;</span>  
                                         </div>
                                     </div>
-                                    <input type="range"  min="0" max="70000" value="10000" step="500" class="range" id="myRange">
+                                    <input type="range"  min="2000" max="50000" value="10000" step="500" class="range" id="myRange">
                                     <div class="prices">
                                         <div class="price">2000 &#8381;</div>
                                         <div class="price">70000 &#8381;</div>
@@ -282,7 +283,10 @@
                                             <span class="input-number" id="day">дней</span>  
                                         </div>
                                     </div>
-                                    <input type="range"  min="10" max="168" value="15" step="1" class="range" id="rangeDate">
+                                    <div class="main">
+                                        <input type="range"  min="10" max="70" value="15" step="1" class="range" id="rangeDate">
+                                        <div id="progressBar"></div>
+                                    </div>
                                     <div class="prices">
                                         <div class="price">10 дней</div>
                                         <div class="price">24 недели</div>
@@ -303,7 +307,7 @@
                 <div class="footer-top">
                     <div class="footer__item">
                         <h2 class="footer__title">КОМУ</h2>
-                        <ul>
+                        <ul class="footer-ul">
                             <li><a href="#">Безработным</a></li>
                             <li><a href="#">Работающему</a></li>
                             <li><a href="#">Неработающим</a></li>
@@ -311,7 +315,7 @@
                             <li><a href="#">Пенсионерам</a></li>
                         </ul>
                         <h2 class="footer__title">ВИДЫ ЗАЙМОВ</h2>
-                        <ul>
+                        <ul class="footer-ul">
                             <li><a href="#">Деньги в долг на карту</a></li>
                             <li><a href="#">Деньги до зарплаты</a></li>
                             <li><a href="#">Быстрый займ</a></li>
@@ -326,7 +330,7 @@
                     </div>
                     <div class="footer__item">
                         <h2 class="footer__title">СПОСОБЫ ПОЛУЧЕНИЯ</h2>
-                        <ul>
+                        <ul class="footer-ul">
                             <li><a href="#">На карту</a></li>
                             <li><a href="#">На карту мастеркард</a></li>
                             <li><a href="#">На карту маэстро</a></li>
@@ -344,7 +348,7 @@
                     </div>
                     <div class="footer__item">
                         <h2 class="footer__title">ОСОБЕННОСТИ</h2>
-                        <ul>
+                        <ul class="footer-ul">
                             <li><a href="#">С плохой кредитной историей</a></li>
                             <li><a href="#">С просрочками</a></li>
                             <li><a href="#">С задолженностью</a></li>
@@ -368,7 +372,7 @@
                     </div>
                     <div class="footer__item">
                         <h2 class="footer__title">ИНФОРМАЦИЯ</h2>
-                        <ul>
+                        <ul class="footer-ul">
                             <li><a href="#">О COVID-19</a></li>
                             <li><a href="#">Федеральный Закон от 03.07.2016 № 230-ФЗ «О защите прав и законных интересов»</a></li>
                             <li><a href="#">Информация для получения финансовой услуги</a></li>
