--- a/index.html
+++ b/index.html
@@ -154,17 +154,19 @@
                                             <h3 class="benefits__title get-left">2. Выберите необходимую сумму</h3>
                                             <div class="benefits__subtitle get-left">Укажите желаемую сумму займа и его срок. Максимальная сумма займа 70 000 рублей.</div>
                                         </div>
-                                        <div class="get-many__item">
-                                            <div class="wrapper-get-img get-right">
-                                                <img src="img/faq3.svg" alt="">
+                                        <div class="wrapper-get-item">
+                                            <div class="get-many__item">
+                                                <div class="wrapper-get-img get-right">
+                                                    <img src="img/faq3.svg" alt="">
+                                                </div>
+                                                <h3 class="benefits__title get-right">3. Дождитесь одобрения</h3>
+                                                <div class="benefits__subtitle get-right">Меньше чем за 1 минуту придет решение по вашей заявке. Система автоматически подберет тариф в соответствии с вашим запросом.</div>
+                                                <div class="wrapper-get-img get-right">
+                                                    <img src="img/faq4.svg" alt="">
+                                                </div>
+                                                <h3 class="benefits__title get-right">4. Получите деньги</h3>
+                                                <div class="benefits__subtitle get-right">Выберите наиболее удобный способ перечисления Вам денег: на банковскую карту, QIWI-Кошелек, через систему Contact или на банковский счет.</div>
                                             </div>
-                                            <h3 class="benefits__title get-right">3. Дождитесь одобрения</h3>
-                                            <div class="benefits__subtitle get-right">Меньше чем за 1 минуту придет решение по вашей заявке. Система автоматически подберет тариф в соответствии с вашим запросом.</div>
-                                            <div class="wrapper-get-img get-right">
-                                                <img src="img/faq4.svg" alt="">
-                                            </div>
-                                            <h3 class="benefits__title get-right">4. Получите деньги</h3>
-                                            <div class="benefits__subtitle get-right">Выберите наиболее удобный способ перечисления Вам денег: на банковскую карту, QIWI-Кошелек, через систему Contact или на банковский счет.</div>
                                         </div>
                                     </div>
                                 </div>
@@ -388,7 +390,7 @@
                     </div>
                 </div>
                 <div class="footer-bottom">
-                    <div class="footer-bottom__item">
+                    <div class="footer-bottom__item footer-pad">
                         <div class="wrapper-logo">
                             <a href="#">
                                 <div class="logo"></div>
@@ -400,7 +402,7 @@
                         <p>Мы используем cookie файлы. Пользуясь сайтом, вы соглашаетесь с нашей <a href="#">Политикой обработки персональных данных</a> Если вы не хотите использовать файлы «cookie», то измените настройки вашего браузера</p>
                         <p>Акция «0% для новых клиентов» (далее – «Акция»), срок проведения Акции – с 10.07.2020 г. по 31.12.2020 г. включительно. Организатор Акции: МФК «Лайм-Займ» (ООО) ИНН 7724889891 ОГРН 1137746831606 Рег.№ 651303045004102 в гос. реестре МФО (далее – «МФК»). Подробные условия <a href="#">акции</a> (*в соответствии с Общими условиями и Правилами).</p>
                     </div>
-                    <div class="footer-bottom__item">
+                    <div class="footer-bottom__item footer-pad">
                         <div class="wrapper-social">
                             <div class="icons__item">
                                 <a href="#">
